--- a/index.html
+++ b/index.html
@@ -41,17 +41,124 @@
             </div>
         </div>
     </header>
+
     <section class="container-fluid">
-        <div class="row row-table">
-            <div class="col-md-8.bg-color-three-reasons section-column">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">
+                            Personal Info
+                        </h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Name:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            David Cotter
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Address:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Croilar Na Mistealach, Dean Lane, Tralee, Co. Kerry. Ireland
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Phone:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            353 12345678
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Email Address:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            davidcotter071@gmail.com
+                        </p>
+                    </div>
+                </div>           
+            </div>
+            <div class="col-md-8 bg-color-three-reasons">
                 <div class="row">
                     <div class="col">
                         <h3 class="section-heading uppercase">About Me</h3>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa-solid fa-question" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p>
+                                    As a Full Stack Web Developer, I build websites from scratch. I work on how they look and how they function. 
+                                    This includes making sure they're easy to use and secure. I also make sure they work well on different devices 
+                                    like computers and phones.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa-solid fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <p>
+                                    I make websites by writing code. This includes making them look good and work properly. 
+                                    I use different programming languages to do this. I also store information on databases and 
+                                    make sure everything runs smoothly. Once the website is done, I put it online so people can use it.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa-solid fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                                <p>
+                                    You should hire me because I'm good at making websites. I know how to make them look nice and work well. 
+                                    I can handle all parts of the job, from the design to the technical stuff. I keep up with the latest technology,
+                                    so your website will be modern and efficient. Plus, I'm a great team player and easy to work with. 
+                                    With me on your team, your web projects will be in good shape.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
