Timeline and history

--- a/resume.html
+++ b/resume.html
@@ -44,12 +44,34 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">
+                        <h3 class="history-heading uppercase">
                             Work History
                         </h3>
+                    </div>
+                </div>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="06/2022 - 10/2022">
+                        <h4>Vaughan Kitchens & Furniture</h4>
+                        <p>AutoCAD Designer & Accounts</p>
+                    </div>
+                    <div class="timeline-item" data-dates="08/2010 - 02/2020">
+                        <h4>Link365 Limited & Insight Building Services Limited</h4>
+                        <p>AutoCAD Designer & Accounts & Websites</p>
+                    </div>
+                    <div class="timeline-item" data-dates="01/2007 - 12/2009">
+                        <h4>Kerry Deaf Resource Centre</h4>
+                        <p>Administrative Assistant</p>
+                    </div>
+                    <div class="timeline-item" data-dates="05/2005 - 08/2006">
+                        <h4>Brendan O Connell Architects</h4>
+                        <p>AutoCAD Designer</p>
+                    </div>
+                    <div class="timeline-item" data-dates="05/2003 - 08/2003">
+                        <h4>Kerry County Council</h4>
+                        <p>AutoCAD Designer</p>
                     </div>
                 </div>
             </div>
@@ -69,9 +91,9 @@
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
                                 <p>
                                     My skill is in making the part of the website that people see and interact with. 
-                                    I use languages like HTML, CSS, JavaScript and Python to create the design and functionality 
-                                    of web pages. Whether it's creating a layout, adding colors and styles, or making buttons 
-                                    work, I've got it covered. I focus on making sure the user experience is smooth and enjoyable.
+                                    I use languages like HTML, CSS, and JavaScript to create the design and functionality 
+                                    of web pages. Whether it's creating a layout, adding colors and styles, or making buttons work, 
+                                    I've got it covered. I focus on making sure the user experience is smooth and enjoyable.
                                 </p>
                             </div>
                         </div>
@@ -86,51 +108,50 @@
                                 <p>
                                     I'm skilled in back-end development, which involves the behind-the-scenes work of websites. 
                                     I use programming languages like Python, or JavaScript along with frameworks like Django, 
-                                    to handle data and logic. This includes tasks like managing databases, processing user input,
-                                    and ensuring the security and performance of the website. I focus on making sure everything 
+                                    to handle data and logic. This includes tasks like managing databases, processing 
+                                    user input, and ensuring the security and performance of the website. I focus on making sure everything 
                                     runs smoothly and securely, even if users can't see it happening.
-                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
-
-        <div class="row progress-section">
-            <div class="col">
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
-                        <span class="sr-only">90% complete</span>
+                <div class="row progress-section">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">HTML / HTML5</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">CSS / CSS3</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
+                                <span class="sr-only">70% complete</span>
+                            </div>
+                            <span class="progress-type">JavaScript / jQuery</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">Django / Python</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">SQL / NoSQL</span>
+                        </div>
                     </div>
-                    <span class="progress-type">HTML / HTML5</span>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
-                        <span class="sr-only">80% complete</span>
-                    </div>
-                    <span class="progress-type">CSS / CSS3</span>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
-                        <span class="sr-only">70% complete</span>
-                    </div>
-                    <span class="progress-type">JavaScript / jQuery</span>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
-                        <span class="sr-only">80% complete</span>
-                    </div>
-                    <span class="progress-type">Django / Python</span>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
-                        <span class="sr-only">80% complete</span>
-                    </div>
-                    <span class="progress-type">SQL / NoSQL</span>
                 </div>
             </div>
         </div>
-    </div>
-</div>        
+        
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
