--- a/resume.html
+++ b/resume.html
@@ -158,7 +158,8 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
+                    I'm a versatile Full Stack Web Developer skilled in HTML to Heroku, 
+                    blending structural and design thinking for seamless digital solutions.
                 </p>
             </div>
             <div class="col-sm-4">
