--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa-solid fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem">
-                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa-regular fa-comment" aria-hidden="true"></i><span>Contact</span></a>
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa-solid fa-comment" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
                                 <a href="assets/cv/david-cotter-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa-solid fa-download" aria-hidden="true"></i><span>Download CV</span></a>
@@ -215,5 +215,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://kit.fontawesome.com/7ba55c86da.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
