--- a/interests.html
+++ b/interests.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>David Cotter</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>David</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
+
 <body>
     <header>
         <div class="row no-gutters">
-            <a class="col-md-4 logo" href="02-index.html"></a>
+            <a href="index.html" class="col-md-4 logo">
+                
+            </a>
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
                         <h1 class="name">David Cotter</h1>
-                        <h2 class="title"> Full Stack Developer</h2>
+                        <h2 class="title">Full Stack Developer</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
@@ -50,56 +54,34 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-work-history section-column">
+            <div class="col-md-4 bg-color-conferences section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="history-heading uppercase">
-                            Work History
+                        <h3 class="section-heading uppercase">
+                            Conferences And Meetups Attended
                         </h3>
                     </div>
                 </div>
-                <div class="history-items">
-                    <div class="timeline-item" data-dates="06/2022 - 10/2022">
-                        <h4>Vaughan Kitchens & Furniture</h4>
-                        <p>AutoCAD Designer & Accounts</p>
-                    </div>
-                    <div class="timeline-item" data-dates="08/2010 - 02/2020">
-                        <h4>Link365 Limited & Insight Building Services Limited</h4>
-                        <p>AutoCAD Designer & Accounts & Websites</p>
-                    </div>
-                    <div class="timeline-item" data-dates="01/2007 - 12/2009">
-                        <h4>Kerry Deaf Resource Centre</h4>
-                        <p>Administrative Assistant</p>
-                    </div>
-                    <div class="timeline-item" data-dates="05/2005 - 08/2006">
-                        <h4>Brendan O Connell Architects</h4>
-                        <p>AutoCAD Designer</p>
-                    </div>
-                    <div class="timeline-item" data-dates="05/2003 - 08/2003">
-                        <h4>Kerry County Council</h4>
-                        <p>AutoCAD Designer</p>
-                    </div>
-                </div>
+                <div id="map"></div>
             </div>
-            <div class="col-md-8 bg-color-three-reasons section-column">
+            <div class="col-md-8 bg-color-groups">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">My Skills</h3>
+                        <h3 class="section-heading uppercase">My Groups And Societies</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Front End</h4>
+                                <h4 class="three-reasons-heading uppercase">Coding Grace</h4>
                                 <p>
-                                    My skill is in making the part of the website that people see and interact with. 
-                                    I use languages like HTML, CSS, and JavaScript to create the design and functionality 
-                                    of web pages. Whether it's creating a layout, adding colors and styles, or making buttons work, 
-                                    I've got it covered. I focus on making sure the user experience is smooth and enjoyable.
+                                    Coding Grace are a group of developers based in Ireland who love to code and do other geeky and not necessarily crafty activities. Some of us code full-time, or just for fun (or both). We have people who are part of other technical user groups such as
+                                    Dublin ALT.NET, GameCraft, Python Ireland, Ruby Ireland and more.
+                                    <a href="https://codinggrace.com/" target="_blank">Coding Grace</a>
                                 </p>
                             </div>
                         </div>
@@ -107,72 +89,65 @@
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Back End</h4>
+                                <h4 class="three-reasons-heading uppercase">Django Girls</h4>
                                 <p>
-                                    I'm skilled in back-end development, which involves the behind-the-scenes work of websites. 
-                                    I use programming languages like Python, or JavaScript along with frameworks like Django, 
-                                    to handle data and logic. This includes tasks like managing databases, processing 
-                                    user input, and ensuring the security and performance of the website. I focus on making sure everything 
-                                    runs smoothly and securely, even if users can't see it happening.
+                                    Django Girls is a non-profit organization and a community that empowers and helps women to organize free, one-day programming workshops by providing tools, resources and support. We are a volunteer run organization with hundreds of people contributing
+                                    to bring more amazing women into the world of technology.
+                                    <a href="https://djangogirls.org/" target="_blank">Django Girls</a>
+                                </p>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row progress-section">
-                    <div class="col">
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
-                                <span class="sr-only">90% complete</span>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
                             </div>
-                            <span class="progress-type">HTML / HTML5</span>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Full Stack NY</h4>
+                                <p>
+                                    Our meetup is an event where web designers and developers can come together to learn from and teach each other about emerging technologies. While speakers at Full Stack focus primarily on angularjs, react, node, hapiJS, espress, plain ole' JavaScript,
+                                    HTML, and CSS, we encourage all local web professionals to join us for vivid discussions around technology across the stack in any language.
+                                    <a href="https://www.meetup.com/javascript-full-stack-development/" target="_blank">Full Stack NY</a>
+                                </p>
+                            </div>
                         </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
-                                <span class="sr-only">80% complete</span>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
                             </div>
-                            <span class="progress-type">CSS / CSS3</span>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
-                                <span class="sr-only">70% complete</span>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">IoT Nation</h4>
+                                <p>
+                                    IoT Nation's mission is to inspire, engage, and connect entrepreneurs, investors, professionals, & enthusiasts worldwide who are active in the Internet of Things (IoT). This group is for professionals and enthusiasts in the Internet of Things. We welcome
+                                    those who want to learn about this emerging field which is fascinating as IoT makes use of a diverse range of technologies and has the promise to impact a vast number of vertical markets.
+                                    <a href="https://www.meetup.com/NYCIOT/" target="_blank">IoT Nation</a>
+                                </p>
                             </div>
-                            <span class="progress-type">JavaScript / jQuery</span>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
-                                <span class="sr-only">80% complete</span>
-                            </div>
-                            <span class="progress-type">Django / Python</span>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
-                                <span class="sr-only">80% complete</span>
-                            </div>
-                            <span class="progress-type">SQL / NoSQL</span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    I'm a versatile Full Stack Web Developer skilled in HTML to Heroku, 
-                    blending structural and design thinking for seamless digital solutions.
+                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
                 </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="assets/cv/david-cotter-cv.pdf" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
@@ -220,9 +195,13 @@
                 </ul>
             </div>
         </div>
+
     </footer>
 
-    <script src="https://kit.fontawesome.com/7ba55c86da.js" crossorigin="anonymous"></script>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8NIKeoofDdKwEFZwwzF8dZNiqp9MmEQw&callback=console.debug&libraries=maps,marker&v=beta"></script>
+    <script src="assets/js/maps.js"></script>
 
 </body>
+
 </html>
