--- a/interests.html
+++ b/interests.html
@@ -77,11 +77,14 @@
                                 <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Coding Grace</h4>
+                                <h4 class="three-reasons-heading uppercase">Code Institute</h4>
                                 <p>
-                                    Coding Grace are a group of developers based in Ireland who love to code and do other geeky and not necessarily crafty activities. Some of us code full-time, or just for fun (or both). We have people who are part of other technical user groups such as
-                                    Dublin ALT.NET, GameCraft, Python Ireland, Ruby Ireland and more.
-                                    <a href="https://codinggrace.com/" target="_blank">Coding Grace</a>
+                                    Code Institute is a team of developers based in Ireland who are passionate about coding and other geeky pursuits. 
+                                    Some of us code full-time, while others do it purely for enjoyment, and many of us engage in various technical user 
+                                    groups such as HTML, JavaScript Python Ireland, Django. This diversity enriches our experiences and allows us 
+                                    to connect with like-minded individuals in the coding community. If you're interested in coding or geeky activities, 
+                                    you'll feel right at home with us!
+                                    <a href="https://codeinstitute.net/" target="_blank">Code Institute</a>
                                 </p>
                             </div>
                         </div>
@@ -92,11 +95,13 @@
                                 <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Django Girls</h4>
+                                <h4 class="three-reasons-heading uppercase">Django</h4>
                                 <p>
-                                    Django Girls is a non-profit organization and a community that empowers and helps women to organize free, one-day programming workshops by providing tools, resources and support. We are a volunteer run organization with hundreds of people contributing
-                                    to bring more amazing women into the world of technology.
-                                    <a href="https://djangogirls.org/" target="_blank">Django Girls</a>
+                                    Django is a non-profit organization and community dedicated to empowering individuals by organizing free, one-day programming workshops. 
+                                    We provide tools, resources, and support to help people learn and excel in technology. As a volunteer-run organization, we have hundreds 
+                                    of contributors who are passionate about bringing more individuals into the world of technology. Join us in our mission to inspire and 
+                                    support aspiring programmers and tech enthusiasts!
+                                    <a href="#" target="_blank">Django</a>
                                 </p>
                             </div>
                         </div>
@@ -107,11 +112,12 @@
                                 <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Full Stack NY</h4>
+                                <h4 class="three-reasons-heading uppercase">Full Stack</h4>
                                 <p>
-                                    Our meetup is an event where web designers and developers can come together to learn from and teach each other about emerging technologies. While speakers at Full Stack focus primarily on angularjs, react, node, hapiJS, espress, plain ole' JavaScript,
-                                    HTML, and CSS, we encourage all local web professionals to join us for vivid discussions around technology across the stack in any language.
-                                    <a href="https://www.meetup.com/javascript-full-stack-development/" target="_blank">Full Stack NY</a>
+                                    Our meetup is an event where web designers and developers gather to share knowledge and insights about emerging technologies. 
+                                    At Full Stack, our speakers primarily focus on React, Node.js, JavaScript, HTML, and CSS. However, we welcome all local web professionals
+                                    to join us for vibrant discussions spanning technology across the stack, regardless of the programming language.
+                                    <a href="#" target="_blank">Full Stack</a>
                                 </p>
                             </div>
                         </div>
@@ -122,11 +128,10 @@
                                 <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">IoT Nation</h4>
+                                <h4 class="three-reasons-heading uppercase">Slack</h4>
                                 <p>
-                                    IoT Nation's mission is to inspire, engage, and connect entrepreneurs, investors, professionals, & enthusiasts worldwide who are active in the Internet of Things (IoT). This group is for professionals and enthusiasts in the Internet of Things. We welcome
-                                    those who want to learn about this emerging field which is fascinating as IoT makes use of a diverse range of technologies and has the promise to impact a vast number of vertical markets.
-                                    <a href="https://www.meetup.com/NYCIOT/" target="_blank">IoT Nation</a>
+                                    
+                                    <a href="#" target="_blank">Slack</a>
                                 </p>
                             </div>
                         </div>
